<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name">WriteApp</string>
  <string name="todo">TODO</string>
  <string name="ph_n_k">Phân kì</string>
  <string name="p_n_ng">ĐÁP ÁN ĐÚNG</string>
  <string name="converge">Converge</string>
  <string name="p_n">ĐÁP ÁN</string>
  <string name="kh_ng_bi_t">Không biết</string>
  <string name="nh_p_ti_ng_anh">NHẬP TIẾNG ANH</string>
</resources>