<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:weightSum="21"
  android:orientation="vertical"
  android:paddingBottom="16dp"
  android:paddingRight="16dp"
  android:paddingLeft="16dp"
  android:paddingTop="16dp"
  xmlns:android="http://schemas.android.com/apk/res/android">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:weightSum="30"
    android:orientation="horizontal">

    <ImageButton
      android:id="@+id/ibClose"
      android:layout_width="50dp"
      android:layout_height="52dp"
      android:layout_weight="1"
      android:background="@android:color/transparent"
      android:contentDescription="@string/todo"
      app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <ProgressBar
      android:id="@+id/pbProgressRegister"
      style="?android:attr/progressBarStyleHorizontal"
      android:layout_width="wrap_content"
      android:layout_height="51dp"
      android:layout_weight="28"
      android:layout_marginHorizontal="22dp"
      android:max="100"
      android:progress="0"
      android:scrollbarSize="@android:dimen/app_icon_size"
      android:secondaryProgress="100"
      android:secondaryProgressTintMode="screen" />
    <ImageButton
      android:id="@+id/ibAdjust"
      android:layout_width="53dp"
      android:layout_height="50dp"
      android:layout_weight="1"
      android:background="@android:color/transparent"
      android:src="@drawable/ibapp" />


  </LinearLayout>

  <TextView
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/ph_n_k"
    android:layout_marginTop="8dp"
    android:textColor="#353532"
    android:textSize="32dp"
    android:id="@+id/tvWordInput"
    />
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="19"/>

  <Button
    android:text="@string/p_n"
    android:id="@+id/btnCheck"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00D9FF"
    android:textColor="#FAFAF5"
    android:textSize="20dp"
    android:layout_gravity="end|bottom" />


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="horizontal"
    android:weightSum="7">
    <EditText
      android:layout_weight="5"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="@android:color/transparent"
      android:layout_gravity="bottom"
      android:textSize="25sp"
      android:ems="10"
      android:id="@+id/editDataEntry"
      android:autofillHints="" />
    <Button
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/kh_ng_bi_t"
      android:id="@+id/btnAnswer"
      android:background="@android:color/transparent"
      android:layout_gravity="bottom|end"
      android:textSize="11sp"
      android:layout_weight="2"
      android:textColor="#A800BCD4"/>

  </LinearLayout>


  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_gravity="top"
    android:background="#E4EC05"/>
  <TextView
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="wrap_content"
    android:hint="@string/nh_p_ti_ng_anh"
    android:id="@+id/tvRequire"
    android:textSize="11sp"/>
</LinearLayout>